need a lower jquery version

--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "tests"
   ],
   "dependencies": {
+    "jquery": "~2.9",
     "bootstrap-sass": "~3.3.5",
     "font-awesome": "~4.4.0",
     "rr-api-explorer": "*"
