--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
     "jquery": "~2.2",
     "bootstrap-sass": "~3.3.5",
     "font-awesome": "~4.4.0",
-    "rr-api-explorer": "*"
+    "rr-api-explorer": "*",
+    "angular-animate": "^1.5.7"
   }
 }
