can load prebuilt queries now and fields sidebar is working pretty good. starting to work on the query help tab

--- a/bower.json
+++ b/bower.json
@@ -35,6 +35,8 @@
     "bootstrap-sass": "~3.3.5",
     "font-awesome": "~4.4.0",
     "rr-api-explorer": "*",
-    "angular-animate": "^1.5.7"
+    "angular-animate": "^1.5.7",
+    "angular-ui-router": "^0.3.1",
+    "angular-scroll": "^1.0.0"
   }
 }
