--- a/bower.json
+++ b/bower.json
@@ -37,6 +37,7 @@
     "rr-api-explorer": "*",
     "angular-animate": "^1.5.7",
     "angular-ui-router": "^0.3.1",
-    "angular-scroll": "^1.0.0"
+    "angular-scroll": "^1.0.0",
+    "angular-bootstrap": "^1.3.3"
   }
 }
