--- a/bower.json
+++ b/bower.json
@@ -38,6 +38,11 @@
     "angular-animate": "^1.5.7",
     "angular-ui-router": "^0.3.1",
     "angular-scroll": "^1.0.0",
-    "angular-bootstrap": "^1.3.3"
+    "angular-bootstrap": "^1.3.3",
+    "ng-walkthrough": "^0.4.3",
+    "ng-disable-scroll": "^0.1.1"
+  },
+  "resolutions": {
+    "angular": "1.5.7"
   }
 }
