--- a/bower.json
+++ b/bower.json
@@ -34,13 +34,13 @@
     "jquery": "~2.2",
     "bootstrap-sass": "~3.3.5",
     "font-awesome": "~4.4.0",
-    "rr-api-explorer": "*",
     "angular-animate": "^1.5.7",
     "angular-ui-router": "^0.3.1",
     "angular-scroll": "^1.0.0",
     "angular-bootstrap": "^1.3.3",
     "ng-walkthrough": "^0.4.3",
-    "ng-disable-scroll": "^0.1.1"
+    "ng-disable-scroll": "^0.1.1",
+    "rr-api-explorer": "dev"
   },
   "resolutions": {
     "angular": "1.5.7"
