remove resolution and make sure this branch is using the feature version

--- a/bower.json
+++ b/bower.json
@@ -40,10 +40,9 @@
     "angular-bootstrap": "^1.3.3",
     "ng-walkthrough": "^0.4.3",
     "ng-disable-scroll": "^0.1.1",
-    "rr-api-explorer": "*"
+    "rr-api-explorer": "#feature/map"
   },
   "resolutions": {
-    "angular": "1.5.7",
-    "rr-api-explorer": "feature/map"
+    "angular": "1.5.7"
   }
 }
