--- a/bower.json
+++ b/bower.json
@@ -40,7 +40,11 @@
     "angular-scroll": "^1.0.0",
     "angular-bootstrap": "^1.3.3",
     "ng-walkthrough": "^0.4.3",
-    "ng-disable-scroll": "^0.1.1"
+    "ng-disable-scroll": "^0.1.1",
+    "rets-rabbit-js": "^1.0.8",
+    "loaders.css": "^0.1.2",
+    "renderjson": "^1.2.3",
+    "angular-sanitize": "^1.5.8"
   },
   "resolutions": {
     "angular": "1.5.7"
