--- a/package.json
+++ b/package.json
@@ -18,6 +18,16 @@
     "gulp-rm": "^1.0.0",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.4.2",
-    "gulp-watch": "^4.3.5"
+    "gulp-watch": "^4.3.5",
+    "laravel-elixir": "^6.0.0-11",
+    "laravel-elixir-remove": "^0.2.1",
+    "laravel-elixir-rollup-official": "^1.1.0",
+    "laravel-elixir-vue": "^0.1.8",
+    "laravel-elixir-webpack-official": "^1.0.8"
+  },
+  "dependencies": {
+    "rets-rabbit-js": "^1.0.8",
+    "vue": "^1.0.26",
+    "vue-router": "^2.0.0"
   }
 }
