--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,6 @@
     "jquery": "~2.2",
     "bootstrap-sass": "~3.3.5",
     "font-awesome": "~4.4.0",
-    "rr-api-explorer": "*",
     "angular-animate": "^1.5.7",
     "angular-ui-router": "^0.3.1",
     "angular-scroll": "^1.0.0",
@@ -45,7 +44,11 @@
     "renderjson": "^1.2.3",
     "angular-sanitize": "^1.5.8",
     "ngToast": "ngtoast#^2.0.0",
-    "bootstrap-datepicker": "^1.6.4"
+    "bootstrap-datepicker": "^1.6.4",
+    "rr-api-explorer": "^1.1.4",
+    "bower": "*",
+    "install": "^1.0.4",
+    "angular-google-maps": "^2.4.0"
   },
   "resolutions": {
     "angular": "1.5.7"
