--- a/bower.json
+++ b/bower.json
@@ -45,10 +45,10 @@
     "angular-sanitize": "^1.5.8",
     "ngToast": "ngtoast#^2.0.0",
     "bootstrap-datepicker": "^1.6.4",
-    "rr-api-explorer": "^1.1.4",
     "bower": "*",
     "install": "^1.0.4",
-    "angular-google-maps": "^2.4.0"
+    "angular-google-maps": "^2.4.0",
+    "rr-api-explorer": "^1.2.2"
   },
   "resolutions": {
     "angular": "1.5.7"
